Mid Term Project

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,30 @@ __pycache__/
 /chapter-09-kubernetes/clothing-model/
 /chapter-09-kubeflow/clothing-model/
 *.tflite
-*.csv
+
+.ipynb_checkpoints
+.bin
+*.db
+
 *.parquet
+*.html
+*.csv
+*.pkl
+
+.venv
+venv
+.idea
+**/artifacts/
+**/artifacts_local/
+**/models/
+**/mlruns/
+
+__pycache__/
+**.env
+**.terraform/
+**.terraform.lock*
+**terraform.tfstate*
+
+.DS_Store
+
+soft/
