--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,36 @@ __pycache__/
 # data folders
 **data/
 
+.ipynb_checkpoints
+.bin
+*.db
+
+*.parquet
+*.html
+*.csv
+*.pkl
+*.bin
+
+.venv
+venv
+.idea
+**/artifacts/
+**/artifacts_local/
+**/models/
+**/mlruns/
+
+__pycache__/
+**.env
+**.terraform/
+**.terraform.lock*
+**terraform.tfstate*
+
+.DS_Store
+
+soft/
+
+**/*_t1wce_*
+
 #  content-specific
 /08-deep-learning/clothing-dataset-small/
 /08-deep-learning/clothing-dataset/
